--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
 .illustration {
     flex: 1;
     max-width: 150px;
-    padding-bottom: 80px;
+    padding-bottom: 100px;
     text-align: center;
 }
 
@@ -108,9 +108,10 @@ a {
 }
 
 .quote .text {
-    font-size: 26px;
+    font-size: 36px;
     font-style: italic;
-    font-weight: 400;
+    font-family: "light italic";
+    font-weight: 100;
     color: #1F2937;
 }
 
@@ -118,4 +119,46 @@ a {
     font-weight: 700;
     text-align: right;
     padding-top: 15px;
+}
+
+.signup {
+    display: flex;
+    border-radius: 10px;
+    margin: 70px 120px;
+    background-color: #3882F6;
+    justify-content: space-around;
+}
+
+.signup .left {
+    padding: 40px;
+}
+
+.left .text1 {
+    color: #F9FAF8;
+    font-weight: 700;
+    font-size: 23px;
+}
+
+.left .text {
+    color: lightgrey;
+}
+
+.lower {
+    background-color: #3882F6;
+    border: 2px solid white;
+    padding: 5px 20px;
+    border-radius: 6px;
+    margin: 40px;
+    font-weight: 700;
+}
+
+.lower a {
+    color: white;
+}
+
+.footer {
+    background-color: #1F2937;
+    text-align: center;
+    color: #E5E7EB;
+    padding: 30px 0;
 }
