--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
-    
+    width: 1050px;
     justify-content: space-between;
     font-family: "Roboto", sans-serif;
-    margin: 0;
+    margin: 0 auto;
     
 }
 
